# slice-pool-rs

./: Cargo.toml  README.md
src/: lib.rs  owned.rs  refd.rs
src/sync/: mod.rs  owned.rs
src/unsync/: mod.rs  owned.rs
