[package]
name = "slice-pool"
version = "0.4.1"
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "A library for using a slice as a memory pool"
documentation = "https://docs.rs/slice-pool"
keywords = ["pool", "slice", "chunk", "memory", "wrap"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/darfink/slice-pool-rs"

[dependencies]
